# zed-arkts

./: .env.example  .gitignore  Cargo.toml  LICENSE  QUICK_REFERENCE.md  README.md  VERIFICATION.md  build.rs  build.sh  extension.toml  install-dev.sh
.github/workflows/: ci.yml  e2e-automated.yml
docs/: AUTOMATION_DESIGN.md  AUTOMATION_SUMMARY.md  FORMATTING.md  FORMATTING_EN.md  FORMATTING_EXAMPLES.md  FULL_AUTOMATION.md  RESEARCH_SUMMARY.md  SUMMARY.md  TESTING.md  TESTING_EN.md  ZED_CLI_TESTING.md
ets/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  javascript-grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json  typescript-grammar.js
ets/src/: grammar.json  node-types.json
fixtures/: README.md  oh-package.json5  simple.ets  test.ets
grammars/: ets.tmLanguage.json
language-server-wrapper/: index.js
languages/arkts/: config.toml  highlights.scm
languages/ets/: config.toml  highlights.scm
ohos-typescript-playground/: package-lock.json  package.json
scripts/: auto-install-local-extension.sh  auto-install-zed.sh  e2e-automated-test.sh  install-extension.sh  install-mock-ohos-sdk.sh  run-lsp-tests.sh  test-formatting.sh  test-lsp-automated.sh  test-lsp-features.sh  test-zed-integration.sh  test-zed-real.sh
snippets/: ets.json
src/: embedded_js.rs  lib.rs  node_child_process.rs
test-fixtures/arkts-sample-project/: README.md  oh-package.json5
zed-ets-language-server/: index.js  package-lock.json  package.json  test-list-libs.mjs
zed-ets-language-server/lib/: data-parser.js  lib-expander.js  (+3 more)
(+24 files in other folders)
