[package]
name = "arkts-zed"
version = "0.1.0"
edition = "2021"
description = "A Zed extension for ArkTS development"
authors = ["liuyanghejerry <liuyanghejerry@126.com>"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
